--- a/public/chat.html
+++ b/public/chat.html
@@ -19,9 +19,16 @@
         <h2 id="room-name"></h2>
         <h3><i class="fas fa-users"></i> Users</h3>
         <ul id="users">
+          <li v-for="user in users" :key="user.id">{{user.username}}</li>
         </ul>
       </div>
       <div class="chat-messages">
+        <div v-for="message in messages" class="message">
+          <p class="meta">{{message.username}} <span>{{message.time}}</span></p>
+          <p class="text">
+            {{message.messageText}}
+          </p>
+        </div>
       </div>
     </main>
     <div class="chat-form-container">
@@ -37,6 +44,7 @@
       </form>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.10.1/qs.min.js" integrity="sha512-aTKlYRb1QfU1jlF3k+aS4AqTpnTXci4R79mkdie/bp6Xm51O5O3ESAYhvg6zoicj/PD6VYY0XrYwsWLcvGiKZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/main.js"></script>
